feat(mq-isolation): optimize default logic on select mq info when redis error (#342)